k3s/apps/lab-environment/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lab-environment
  labels:
    istio.io/dataplane-mode: ambient
