k3s/apps/lab-environment/k8s/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: lab-environment
  labels:
    app: redis
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        trivy-operator.skip: "true"
        app: redis
    spec:
      enableServiceLinks: false
      containers:
        - name: redis
          image: redis:7-alpine
          ports:
            - containerPort: 6379
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 50m
              memory: 64Mi
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: lab-environment
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
