k3s/apps/lab-environment/k8s/toxiproxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: toxiproxy
  namespace: lab-environment
  labels:
    app: toxiproxy
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: toxiproxy
  template:
    metadata:
      labels:
        trivy-operator.skip: "true"
        app: toxiproxy
    spec:
      serviceAccountName: toxiproxy
      enableServiceLinks: false
      volumes:
        - name: config
          configMap:
            name: toxiproxy-config
      containers:
        - name: toxiproxy
          image: ghcr.io/shopify/toxiproxy:2.9.0
          args: ["-host=0.0.0.0", "-config=/config/toxiproxy.json"]
          volumeMounts:
            - name: config
              mountPath: /config
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
            limits:
              cpu: 200m
              memory: 32Mi
---
apiVersion: v1
kind: Service
metadata:
  name: toxiproxy
  namespace: lab-environment
spec:
  selector:
    app: toxiproxy
  ports:
    - port: 8474
      targetPort: 8474
      name: api
    - port: 5432
      targetPort: 5432
      name: postgres
    - port: 6379
      targetPort: 6379
      name: redis
