k3s/apps/lab-environment/k8s/waypoint.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: waypoint
  namespace: lab-environment
  labels:
    istio.io/waypoint-for: service
spec:
  gatewayClassName: istio-waypoint
  infrastructure:
    parametersRef:
      group: ""
      kind: ConfigMap
      name: waypoint-params
  listeners:
    - name: mesh
      port: 15008
      protocol: HBONE
